--- a/index.html
+++ b/index.html
@@ -151,24 +151,27 @@
             <td><strong>Efficiency and Intelligence in Code Generation</strong></td>
           </tr>
           <tr>
-            <td></td>
-            <td>
+            <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>[🔬] 11:30 – 11:50</td>
-                  <td><em>An Introduction to Indirect Code Completion</em></td>
+                  <td>11:30</td>
+                  <td>🚀</td>
+                  <td>An Introduction to Indirect Code Completion</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 11:50 – 12:00</td>
-                  <td><em>Same Size, Different Costs</em></td>
+                  <td>11:50</td>
+                  <td>🌟</td>
+                  <td>Same Size, Different Costs</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 12:00 – 12:10</td>
-                  <td><em>The Cost of AI-Assisted Coding</em></td>
+                  <td>12:00</td>
+                  <td>🌟</td>
+                  <td>The Cost of AI-Assisted Coding</td>
                 </tr>
                 <tr>
-                  <td>[🚀] 12:10 – 12:30</td>
-                  <td><em>Bridging CPU and GPU in Rust</em></td>
+                  <td>12:10</td>
+                  <td>🚀</td>
+                  <td>Bridging CPU and GPU in Rust</td>
                 </tr>
               </table>
             </td>
@@ -182,28 +185,32 @@
             <td><strong>Mining and Modelling of Software Knowledge</strong>
           </tr>
           <tr>
-            <td></td>
-            <td>
+            <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>[🌟] 14:00 – 14:10</td>
-                  <td><em>Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</em></td>
+                  <td>14:00</td>
+                  <td>🌟</td>
+                  <td>Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 14:10 – 14:20</td>
-                  <td><em>Analysis of Code Clones in GitHub Actions Workflows</em></td>
+                  <td>14:10</td>
+                  <td>🌟</td>
+                  <td>Analysis of Code Clones in GitHub Actions Workflows</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 14:20 – 14:30</td>
-                  <td><em>Determining Code Proficiency Levels from Python Textbooks</em></td>
+                  <td>14:20</td>
+                  <td>🌟</td>
+                  <td>Determining Code Proficiency Levels from Python Textbooks</td>
                 </tr>
                 <tr>
-                  <td>[🔬] 14:30 – 14:50</td>
-                  <td><em>Building Reliable Interfaces for Developer Guidance and Exploration</em></td>
+                  <td>14:30</td>
+                  <td>🔬</td>
+                  <td>Building Reliable Interfaces for Developer Guidance and Exploration</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 14:50 – 15:00</td>
-                  <td><em>On the Automation and Reuse Practices in GitHub Actions</em></td>
+                  <td>14:50</td>
+                  <td>🌟</td>
+                  <td>On the Automation and Reuse Practices in GitHub Actions</td>
                 </tr>
               </table>
             </td>
@@ -217,20 +224,22 @@
             <td><strong>Software Testing</strong></td>
           </tr>
           <tr>
-            <td></td>
-            <td>
+            <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>[🚀] 15:30 – 15:50</td>
-                  <td><em>Preliminary Survey on CPS Testing in Various Domains of the Industry</em></td>
+                  <td>15:30</td>
+                  <td>🚀</td>
+                  <td>Preliminary Survey on CPS Testing in Various Domains of the Industry</td>
                 </tr>
                 <tr>
-                  <td>[🔬] 15:50 – 16:10</td>
-                  <td><em>A Framework for Generation of Synthetic Data to Compare Flakiness Scores</em></td>
+                  <td>15:50</td>
+                  <td>🔬</td>
+                  <td>A Framework for Generation of Synthetic Data to Compare Flakiness Scores</td>
                 </tr>
                 <tr>
-                  <td>[🔁] 16:10 – 16:30</td>
-                  <td><em>Evaluating Test-Driven Code Generation: A Replication Study</em></td>
+                  <td>16:10</td>
+                  <td>🔁</td>
+                  <td>Evaluating Test-Driven Code Generation: A Replication Study</td>
                 </tr>
               </table>
             </td>
@@ -262,28 +271,32 @@
             <td><strong>Evolving Software Ecosystems</strong></td>
           </tr>
           <tr>
-            <td></td>
-            <td>
+            <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>[🔬] 11:00 – 11:20</td>
-                  <td><em>On the Evolution of Direct Dependencies in npm Packages</em></td>
+                  <td>11:00</td>
+                  <td>🔬</td>
+                  <td>On the Evolution of Direct Dependencies in npm Packages</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 11:20 – 11:30</td>
-                  <td><em>An Empirical Analysis of the GitHub Actions Language Usage and Evolution</em></td>
+                  <td>11:20</td>
+                  <td>🌟</td>
+                  <td>An Empirical Analysis of the GitHub Actions Language Usage and Evolution</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 11:30 – 11:40</td>
-                  <td><em>Language-Level Support for Multiple Versions for Software Evolution</em></td>
+                  <td>11:30</td>
+                  <td>🌟</td>
+                  <td>Language-Level Support for Multiple Versions for Software Evolution</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 11:40 – 11:50</td>
-                  <td><em>On the Transferability of a Bot Detection Model from GitHub to GitLab</em></td>
+                  <td>11:40</td>
+                  <td>🌟</td>
+                  <td>On the Transferability of a Bot Detection Model from GitHub to GitLab</td>
                 </tr>
                 <tr>
-                  <td>[🌟] 11:50 – 12:00</td>
-                  <td><em>Evolution-Resilient Class Contours</em></td>
+                  <td>11:50</td>
+                  <td>🌟</td>
+                  <td>Evolution-Resilient Class Contours</td>
                 </tr>
               </table>
             </td>
@@ -305,20 +318,22 @@
             <td><strong>Structure and Visualisation in Evolving Software Systems</strong></td>
           </tr>
           <tr>
-            <td></td>
-            <td>
+            <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>[🚀] 14:30 – 14:50</td>
-                  <td><em>On the Structuring of L<sup>A</sup>T<sub>E</sub>X Projects</em></td>
+                  <td>14:30</td>
+                  <td>🚀</td>
+                  <td>On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</td>
                 </tr>
                 <tr>
-                  <td>[🚀] 14:50 – 15:10</td>
-                  <td><em>From Verification Tool to Research Vessel</em></td>
+                  <td>14:50</td>
+                  <td>🚀</td>
+                  <td>From Verification Tool to Research Vessel</td>
                 </tr>
                 <tr>
-                  <td>[🔬] 15:10 – 15:30</td>
-                  <td><em>Pseudonymization as a Service</em></td>
+                  <td>15:10</td>
+                  <td>🔬</td>
+                  <td>Pseudonymization as a Service</td>
                 </tr>
               </table>
             </td>
@@ -402,7 +417,7 @@
         <br/>
         <h4>Submission Guidelines</h4>
         <p class="text">
-          All submissions must conform to the new CEUR-ART style. One can use the <span class="latex">L<sup>A</sup>T<sub>E</sub>X</span> template directly on <a
+          All submissions must conform to the new CEUR-ART style. One can use the <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> template directly on <a
             href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a
             href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX
           template files). All submissions should use the <strong>single-column</strong> template.
@@ -429,20 +444,21 @@
 
         <h4>Important Dates</h4>
         <p class="text">
-          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
+          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE,
+          23:59) calendar designation.</b>
         </p>
         <ul>
-            <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
-            <br>
-            <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-            <br>
-            <li><b>Author Registration Deadline:</b> <strong class="red">Fri 7 November 2025</strong></li>
-            <br>
-            <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
-            <br>
-            <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong> </li>
-            <br>
-            <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
+          <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
+          <br>
+          <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
+          <br>
+          <li><b>Author Registration Deadline:</b> <strong class="red">Fri 7 November 2025</strong></li>
+          <br>
+          <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
+          <br>
+          <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
+          <br>
+          <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
         </ul>
       </div>
     </div>
@@ -546,19 +562,23 @@
       <div class="row">
         <ul>
           <li>
-              <a href="https://alexandernolte.github.io">Alexander Nolte</a>, Eindhoven University of Technology, Netherlands
+            <a href="https://alexandernolte.github.io">Alexander Nolte</a>, Eindhoven University of Technology,
+            Netherlands
           </li>
           <li>
-              <a href="https://www.tue.nl/en/research/researchers/alexander-serebrenik">Alexander Serebrenik</a>, Eindhoven University of Technology, Netherlands
+            <a href="https://www.tue.nl/en/research/researchers/alexander-serebrenik">Alexander Serebrenik</a>,
+            Eindhoven University of Technology, Netherlands
           </li>
           <li>
             <a href="https://decan.lexpage.net">Alexandre Decan</a>, University of Mons, Belgium
           </li>
           <li>
-              <a href="https://www.uva.nl/en/profile/o/p/a.m.oprescu/a.m.oprescu.html?cb">Ana-Maria Oprescu</a>, University of Amsterdam, Netherlands
+            <a href="https://www.uva.nl/en/profile/o/p/a.m.oprescu/a.m.oprescu.html?cb">Ana-Maria Oprescu</a>,
+            University of Amsterdam, Netherlands
           </li>
           <li>
-              <a href="https://www.rug.nl/staff/a.capiluppi/?lang=en">Andrea Capiluppi</a>, University of Groningen, Netherlands
+            <a href="https://www.rug.nl/staff/a.capiluppi/?lang=en">Andrea Capiluppi</a>, University of Groningen,
+            Netherlands
           </li>
           <li>
             <a href="https://aranega.github.io/author/anne-etien/">Anne Etien</a>, University of Lille, France
@@ -582,7 +602,8 @@
             <a href="https://www.johanfabry.be">Johan Fabry</a>, Raincode Labs, Belgium
           </li>
           <li>
-              <a href="https://lmove.github.io">Lina Ochoa-Venegas</a>, Eindhoven University of Technology, The Netherlands
+            <a href="https://lmove.github.io">Lina Ochoa-Venegas</a>, Eindhoven University of Technology, The
+            Netherlands
           </li>
           <li>
             <a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands
@@ -594,7 +615,8 @@
             <a href="https://ropdeb.ee">Ruben Opdebeeck</a>, Vrije Universiteit Brussel, Belgium
           </li>
           <li>
-              <a href="https://www.uantwerpen.be/en/staff/serge-demeyer/">Serge Demeyer</a>, Universiteit Antwerpen (ANSYMO), Belgium
+            <a href="https://www.uantwerpen.be/en/staff/serge-demeyer/">Serge Demeyer</a>, Universiteit Antwerpen
+            (ANSYMO), Belgium
           </li>
           <li>
             <a href="https://siamakfarshidi.nl">Siamak Farshidi</a>, Wageningen University & Research, Netherlands
@@ -603,7 +625,8 @@
             <a href="https://slingerjansen.nl/whats-in-a-name/">Slinger Jansen</a>, Utrecht University, Netherlands
           </li>
           <li>
-              <a href="https://research.vu.nl/en/persons/vincenzo-stoico">Vincenzo Stoico</a>, Vrije Universiteit Amsterdam
+            <a href="https://research.vu.nl/en/persons/vincenzo-stoico">Vincenzo Stoico</a>, Vrije Universiteit
+            Amsterdam
           </li>
         </ul>
       </div>
@@ -618,7 +641,8 @@
     <div class="row">
       <div class="col">
         <p class="text">
-          The hosting venue is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>, details to be announced soon.
+          The hosting venue is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>, details
+          to be announced soon.
         </p>
       </div>
     </div>
@@ -682,23 +706,30 @@
           <li>🇳🇱 BENEVOL 2012 in Delft</li>
           <!-- https://www.slideshare.net/slideshow/benevol-2013-keynote-the-social-software-revolution/15480756 -->
           <li>🇧🇪 <a href="https://soft.vub.ac.be/benevol2011/">BENEVOL 2011</a> in Brussels</li>
-          <li>🇫🇷 <a href="https://web.archive.org/web/20120118115045/http://rmod.lille.inria.fr/benevol/">BENEVOL 2010</a> in Lille</li>
+          <li>🇫🇷 <a href="https://web.archive.org/web/20120118115045/http://rmod.lille.inria.fr/benevol/">BENEVOL
+            2010</a> in Lille
+          </li>
           <!-- https://researchr.org/conference/benevol-2010 -->
           <li>🇧🇪 BENEVOL 2009 in Louvain-la-Neuve</li>
           <!-- https://www.cetic.be/CETIC-au-Workshop-BENEVOL-2009 -->
-          <li>🇳🇱 <a href="https://web.archive.org/web/20240219062714/https://www-set.win.tue.nl/benevol2008/">BENEVOL 2008</a> in Eindhoven</li>
+          <li>🇳🇱 <a href="https://web.archive.org/web/20240219062714/https://www-set.win.tue.nl/benevol2008/">BENEVOL
+            2008</a> in Eindhoven
+          </li>
           <li>🇧🇪 <a href="https://staff.info.unamur.be/acl/benevol/">BENEVOL 2007</a> in Namur</li>
           <li>🇳🇱 BENEVOL 2006 in Delft</li>
           <li>🇧🇪 <a href="https://web.archive.org/web/20061018002017/http://restructuring.ulb.ac.be/events/benevol4/">
             BENEVOL 2005'</a> in Brussels
           </li>
-          <li>🇳🇱 <a href="https://web.archive.org/web/20240911042015/http://www.program-transformation.org/Transform/BenevolTwoThousandFive">
+          <li>🇳🇱 <a
+              href="https://web.archive.org/web/20240911042015/http://www.program-transformation.org/Transform/BenevolTwoThousandFive">
             BENEVOL 2005</a> in Eindhoven
           </li>
-          <li>🇧🇪 <a href="https://web.archive.org/web/20240505190031/https://www.program-transformation.org/Transform/BenevolTwoThousandFour">
+          <li>🇧🇪 <a
+              href="https://web.archive.org/web/20240505190031/https://www.program-transformation.org/Transform/BenevolTwoThousandFour">
             BENEVOL 2004</a> in Antwerpen
           </li>
-          <li>🇳🇱 <a href="https://web.archive.org/web/20240715104741/https://www.program-transformation.org/Transform/BenevolTwoThousandThree">
+          <li>🇳🇱 <a
+              href="https://web.archive.org/web/20240715104741/https://www.program-transformation.org/Transform/BenevolTwoThousandThree">
             BENEVOL 2003</a> in Amsterdam
           </li>
         </ul>
