some visual massaging + bring end times back

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="col">
       <div class="row">
         <p class="text">
-          Detailed schedule will be made available closer to the workshop date.
+          Symbols designate 🔬CORE, 🚀DIVE, 🔁REAP and 🌟SHOW papers.
         </p>
       </div>
 
@@ -140,7 +140,11 @@
           </tr>
           <tr>
             <td>10:00 – 11:00</td>
-            <td><strong>Keynote</strong></td>
+            <td>
+              <strong>🔥 Keynote:</strong>
+              <span class="talk">From the Trenches</span>
+              (<span class="presenter">Darius Blasband</span>)
+            </td>
           </tr>
           <tr>
             <td>11:00 – 11:30</td>
@@ -154,22 +158,22 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>11:30</td>
+                  <td>11:30–11:50</td>
                   <td>🚀</td>
                   <td>An Introduction to Indirect Code Completion</td>
                 </tr>
                 <tr>
-                  <td>11:50</td>
+                  <td>11:50–12:00</td>
                   <td>🌟</td>
                   <td>Same Size, Different Costs</td>
                 </tr>
                 <tr>
-                  <td>12:00</td>
+                  <td>12:00–12:10</td>
                   <td>🌟</td>
                   <td>The Cost of AI-Assisted Coding</td>
                 </tr>
                 <tr>
-                  <td>12:10</td>
+                  <td>12:10–12:30</td>
                   <td>🚀</td>
                   <td>Bridging CPU and GPU in Rust</td>
                 </tr>
@@ -188,27 +192,27 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>14:00</td>
+                  <td>14:00–14:10</td>
                   <td>🌟</td>
                   <td>Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</td>
                 </tr>
                 <tr>
-                  <td>14:10</td>
+                  <td>14:10–14:20</td>
                   <td>🌟</td>
                   <td>Analysis of Code Clones in GitHub Actions Workflows</td>
                 </tr>
                 <tr>
-                  <td>14:20</td>
+                  <td>14:20–14:30</td>
                   <td>🌟</td>
                   <td>Determining Code Proficiency Levels from Python Textbooks</td>
                 </tr>
                 <tr>
-                  <td>14:30</td>
+                  <td>14:30–14:50</td>
                   <td>🔬</td>
                   <td>Building Reliable Interfaces for Developer Guidance and Exploration</td>
                 </tr>
                 <tr>
-                  <td>14:50</td>
+                  <td>14:50–15:00</td>
                   <td>🌟</td>
                   <td>On the Automation and Reuse Practices in GitHub Actions</td>
                 </tr>
@@ -227,17 +231,17 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>15:30</td>
+                  <td>15:30–15:50</td>
                   <td>🚀</td>
                   <td>Preliminary Survey on CPS Testing in Various Domains of the Industry</td>
                 </tr>
                 <tr>
-                  <td>15:50</td>
+                  <td>15:50–16:10</td>
                   <td>🔬</td>
                   <td>A Framework for Generation of Synthetic Data to Compare Flakiness Scores</td>
                 </tr>
                 <tr>
-                  <td>16:10</td>
+                  <td>16:10–16:30</td>
                   <td>🔁</td>
                   <td>Evaluating Test-Driven Code Generation: A Replication Study</td>
                 </tr>
@@ -259,8 +263,11 @@
             </th>
           </tr>
           <tr>
-            <td>09:30 – 10:30</td>
-            <td><strong>Keynote</strong></td>
+            <td>
+              <strong>🔥 Keynote:</strong>
+              <!-- <span class="talk">From the Trenches</span> -->
+              (<span class="presenter">Hidehiko Masuhara</span>)
+            </td>
           </tr>
           <tr>
             <td>10:30 – 11:00</td>
@@ -274,27 +281,27 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>11:00</td>
+                  <td>11:00–11:20</td>
                   <td>🔬</td>
                   <td>On the Evolution of Direct Dependencies in npm Packages</td>
                 </tr>
                 <tr>
-                  <td>11:20</td>
+                  <td>11:20–11:30</td>
                   <td>🌟</td>
                   <td>An Empirical Analysis of the GitHub Actions Language Usage and Evolution</td>
                 </tr>
                 <tr>
-                  <td>11:30</td>
+                  <td>11:30–11:40</td>
                   <td>🌟</td>
                   <td>Language-Level Support for Multiple Versions for Software Evolution</td>
                 </tr>
                 <tr>
-                  <td>11:40</td>
+                  <td>11:40–11:50</td>
                   <td>🌟</td>
                   <td>On the Transferability of a Bot Detection Model from GitHub to GitLab</td>
                 </tr>
                 <tr>
-                  <td>11:50</td>
+                  <td>11:50–12:00</td>
                   <td>🌟</td>
                   <td>Evolution-Resilient Class Contours</td>
                 </tr>
@@ -321,17 +328,17 @@
             <td colspan="2">
               <table class="sch">
                 <tr>
-                  <td>14:30</td>
+                  <td>14:30–14:50</td>
                   <td>🚀</td>
                   <td>On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</td>
                 </tr>
                 <tr>
-                  <td>14:50</td>
+                  <td>14:50–15:10</td>
                   <td>🚀</td>
                   <td>From Verification Tool to Research Vessel</td>
                 </tr>
                 <tr>
-                  <td>15:10</td>
+                  <td>15:10–15:30</td>
                   <td>🔬</td>
                   <td>Pseudonymization as a Service</td>
                 </tr>
@@ -344,7 +351,7 @@
           </tr>
           <tr>
             <td>16:00 – 17:00</td>
-            <td><strong>TBA</strong> + <strong>Hackathon results</strong></td>
+            <td><strong>Hackathon results</strong> + <strong>Pitches</strong></td>
           </tr>
           <tr>
             <td>17:00 +</td>
